Fix: refactor product service and product utils